--- a/layout/styles/community.css
+++ b/layout/styles/community.css
@@ -91,6 +91,12 @@
 	line-height: 25px;
 }
 
+.notice{
+	color:red;
+	font-size: 15px;
+	text-align-last: center;
+}
+
 .fbplugin{
 	margin-left: 20px;
 	margin-right: 20px;
