--- a/layout/styles/community.css
+++ b/layout/styles/community.css
@@ -92,9 +92,16 @@
 }
 
 .notice{
-	color:red;
+	color:rgb(248, 111, 47);
 	font-size: 15px;
-	text-align-last: center;
+	text-align: center;
+	margin-top: 10px;
+	font-family: 'Montserrat', sans-serif;
+}
+
+.count{
+	width: 20px;
+	height: 20px;
 }
 
 .plugin{
