--- a/layout/styles/about.css
+++ b/layout/styles/about.css
@@ -95,9 +95,9 @@
 	font-size: 15px;
 	padding-left: 20px;
 	text-transform: none;
-	font-style: italic;
 	margin-top: 30px;
 	line-height: 40px;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .fa-gg{
