--- a/layout/styles/community.css
+++ b/layout/styles/community.css
@@ -86,9 +86,10 @@
 	font-size: 13px;
 	padding-left: 25px;
 	text-transform: none;
-	font-style: italic;
 	margin-top: 30px;
 	line-height: 25px;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 300;
 }
 
 .notice{
